Added/Configured Filter Logic and Changed Styles in Pagination

--- a/client/src/components/shared/Pagination/Pagination.css
+++ b/client/src/components/shared/Pagination/Pagination.css
@@ -35,6 +35,7 @@
                 position: relative;
                 /* top: 3pt; Uncomment this to lower the icons as requested in comments*/
                 content: '';
+                color: white!important;
                 /* By using an em scale, the arrows will size with the font */
                 display: inline-block;
                 width: 0.4em;
@@ -45,10 +46,12 @@
 
             &.left {
                 transform: rotate(-135deg) translate(-50%);
+                color: white!important;
             }
 
             &.right {
                 transform: rotate(45deg);
+                color: white!important;
             }
         }
 
@@ -58,11 +61,13 @@
             .arrow::before {
                 border-right: 0.12em solid rgba(0, 0, 0, 0.43);
                 border-top: 0.12em solid rgba(0, 0, 0, 0.43);
+                color: white;
             }
 
             &:hover {
                 background-color: transparent;
                 cursor: default;
+                color: white;
             }
         }
     }
