--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -10,9 +10,13 @@
 .louPortrait {
     width: 100%;
     height: 99%;
+}
+
+.louPortrait:hover {
     box-shadow: 11px 2px 11px 0 rgba(0, 0, 0, .4),
     0 7px 13px -3px rgba(0, 0, 0, .3),
     0 -3px 0 0 rgba(0, 0, 0, .2) inset;
+    transition: box-shadow 0.5s ease-in;
 }
 
 .dropdown-toggle {
