--- a/client/src/components/CacheStatusLabelWrapper/CacheStatusLabelWrapper.css
+++ b/client/src/components/CacheStatusLabelWrapper/CacheStatusLabelWrapper.css
@@ -28,7 +28,7 @@
     justify-content: center;
 }
 
-@media (max-width: 412px) {
+@media only screen and (max-width: 412px) {
     #galleryBanner {
         flex-direction: column;
     }
